login interface done, added buttons on header panel

--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -19,6 +19,12 @@
         <label class="item">
           <button class="button button-block button-positive" type="submit">Log in</button>
         </label>
+        <a style="float:right; width:50%;" href="#/app/playlists" ng-click="closeLogin()" class="button button-energized">
+          Go Back
+        </a>
+        <a style="float:left; width:50%;" href="#/app/search" ng-click="closeLogin()" class="button button-calm">
+          Sign in
+        </a>
       </div>
     </form>
   </ion-content>
