--- a/www/templates/playlists.html
+++ b/www/templates/playlists.html
@@ -1,4 +1,7 @@
-<ion-view view-title="ÁGORA">
+<ion-view>
+  <ion-nav-title>
+    <h2>ΑΓΟΡΑ</h2>
+</ion-nav-title>
   <ion-content>
     <ion-list>
       <br/>
