--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,1 +1,15 @@
 /* Empty. Add your own CSS if you like */
+.close-modal {
+  position: absolute;
+  right: 0px;
+  top: 5px;
+  font-size: 1.8em;
+  text-align: center;
+  z-index: 10;
+  background-color: #f5f5f5;
+  border-radius: 30px;
+  width: 26px;
+  cursor: pointer;
+  line-height: 0px;
+  border: 1px solid #ddd;
+}
