--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,9 +1,7 @@
 <ion-modal-view>
   <ion-header-bar>
     <h1 class="title">Login</h1>
-    <div class="buttons">
-      <button class="button button-clear" ng-click="closeLogin()">Close</button>
-    </div>
+<i class="icon ion-ios-close close-modal" ng-click="closeModal(1)"></i>
   </ion-header-bar>
   <ion-content>
     <form ng-submit="doLogin()">
@@ -17,12 +15,9 @@
           <input type="password" ng-model="loginData.password">
         </label>
         <label class="item">
-          <button class="button button-block button-positive" type="submit">Log in</button>
+          <button class="button button-block button-stable" type="submit">Log in</button>
         </label>
-        <a style="float:right; width:50%;" href="#/app/playlists" ng-click="closeLogin()" class="button button-energized">
-          Go Back
-        </a>
-        <a style="float:left; width:50%;" href="#/app/search" ng-click="closeLogin()" class="button button-calm">
+        <a href="#/app/signin" ng-click="closeModal(1)" class="button button-block button-balanced">
           Sign in
         </a>
       </div>
