--- a/www/templates/signin.html
+++ b/www/templates/signin.html
@@ -1,5 +1,96 @@
 <ion-view view-title="Signin">
   <ion-content>
     <h1>Singin</h1>
+    <! --nickname firstname lastname email password postalcode -->
+    <ion-item>
+       <ion-label>Todo</ion-label>
+       <ion-input type="text" [(ngModel)]="todo.title" name="title"></ion-input>
+     </ion-item>
+     <ion-item>
+       <ion-label>Description</ion-label>
+       <ion-textarea [(ngModel)]="todo.description" name="description"></ion-textarea>
+     </ion-item>
+     <button ion-button type="submit" block>Add Todo</button>
+
+    <!--form name="registerForm" ng-submit="registerForm.$valid"  novalidate>
+									<h3>Customer Data:</h3>
+			      <div class="form-group">
+							<span class="glyphicon glyphicon-flag"></span><label for="name"> Your name:</label>
+								<input name="name" class="form-control" type="text" ng-model="user.name" ng-pattern="/[a-zA-Z]{3,15}/" required />
+							<div ng-show="registerForm.name.$error.pattern" class="has-error">
+								<span class="help-block ">Please, insert a valid user name.</span>
+							</div>
+							<div ng-show="registerForm.name.$error.required" class="advice">
+									<span class="help-block ">Name is required.</span>
+								</div>
+						</div>
+
+            <div class="form-group">
+              <span class="glyphicon glyphicon-flag"></span><label for="lastname"> Your Lastname:</label>
+                <input name="lastname" class="form-control" type="text" ng-model="user.lastName" ng-pattern="/[a-zA-Z]{3,15}/" required />
+              <div ng-show="registerForm.lastname.$error.pattern" class="has-error">
+                <span class="help-block ">Please, insert a valid user name.</span>
+              </div>
+              <div ng-show="registerForm.lastname.$error.required" class="advice">
+                  <span class="help-block ">Name is required.</span>
+                </div>
+            </div>
+
+            <div class="form-group">
+							<span class="glyphicon glyphicon-flag"></span><label for="name"> Nickname:</label>
+								<input ng-change="validateNick()" name="nick" class="form-control" type="text" ng-model="user.nick" ng-pattern="/[a-zA-Z]{3,15}/" required />
+							<div ng-show="registerForm.nick.$error.pattern" class="has-error">
+								<span class="help-block ">Please, insert a valid user name.</span>
+							</div>
+							<div ng-show="registerForm.nick.$error.required" class="advice">
+									<span class="help-block ">Name is required.</span>
+								</div>
+						</div>
+
+
+            <div class="form-group">
+            <label for="postalCode">Postal Code:</label>
+              <input name="postalCode" class="form-control" type="text" ng-model="user.postalCode" ng-pattern="/^[0-9]{5}$/" required />
+            <div ng-show="registerForm.postalCode.$error.pattern" class="has-error">
+              <span class="help-block ">Please insert your four digits code-area.</span>
+            </div>
+            <div ng-show="registerForm.postalCode.$error.required" class="advice">
+              <span class="help-block ">Code-area is required.</span>
+            </div>
+          </div>
+
+						<div class="form-group">
+							<span class="glyphicon glyphicon-envelope"></span><label for="mail"> Your email </label>
+								<input name="mail" class="form-control" type="text" ng-model="user.mail" ng-pattern="/[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$/" required />
+							<div ng-change="validateMail()" ng-show="registerForm.mail.$error.pattern" class="has-error">
+								<span class="help-block ">Please, insert correct email.</span>
+							</div>
+							<div ng-show="registerForm.mail.$error.required" class="advice">
+									<span class="help-block ">Email is required.</span>
+								</div>
+							</div>
+
+							<div class="form-group">
+							<span class="glyphicon glyphicon-phone"></span><label for="password"> Password </label>
+								<input name="password" class="form-control" type="text" ng-model="user.password" ng-pattern="/[0-9]{9,13}/" required />
+							<div ng-show="registerForm.password.$error.pattern" class="has-error">
+								<span class="help-block ">Please insert correct phone-number.</span>
+							</div>
+							<div ng-show="registerForm.movil.$error.required" class="advice">
+								<span class="help-block ">Phone is required.</span>
+							</div>
+						</div>
+
+            <div class="form-group">
+            <span class="glyphicon glyphicon-phone"></span><label for="password2"> Repeat password </label>
+              <input ng-change="validatePassword()" name="password2" type="text" ng-model="password2" ng-pattern="/[0-9]{9,13}/" required />
+            <div ng-show="registerForm.password2.$error.pattern" class="has-error">
+              <span class="help-block ">Please insert correct phone-number.</span>
+            </div>
+            <div ng-show="registerForm.password2.$error.required" class="advice">
+              <span class="help-block ">Phone is required.</span>
+            </div>
+          </div>
+</form-->
   </ion-content>
 </ion-view>
