Added some php controllers,models and daos. Main page operative

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -13,3 +13,8 @@
   line-height: 0px;
   border: 1px solid #ddd;
 }
+.center {
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+}
