--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -17,7 +17,7 @@
         <label class="item">
           <button class="button button-block button-stable" type="submit">Log in</button>
         </label>
-        <a href="#/app/signin" ng-click="closeModal(1)" class="button button-block button-balanced">
+        <a href="#/app/signin" ng-click="state.go('app.signin');closeModal(1)" class="button button-block button-balanced">
           Sign in
         </a>
       </div>
