--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -24,7 +24,7 @@
 
   <ion-side-menu side="left">
     <ion-header-bar class="bar-stable">
-    <img src="images/logo.png">
+    <img src="images/logo.png"/>
     </ion-header-bar>
     <ion-content>
 
