Signin 100% done, pure magic awesome

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -18,3 +18,13 @@
     margin-right: auto;
     display: block;
 }
+@media (min-width: 680px) {
+  .mymodal {
+     width: 90%;
+     height: 90%;
+     top: 5%;
+     left: 5%;
+     right: 5%;
+     bottom: 5%;
+  }
+}
