--- a/www/templates/wizard.html
+++ b/www/templates/wizard.html
@@ -1,4 +1,4 @@
-<ion-modal-view>
+<ion-modal-view class="mymodal">
     <ion-header-bar>
       <i class="icon ion-ios-close close-modal" ng-click="closeModal(2)"></i>
       <h1 class="title">HOW IT WORKS?</h1>
