--- a/www/templates/playlists.html
+++ b/www/templates/playlists.html
@@ -8,7 +8,7 @@
       <br/>
       <ion-item ng-repeat="question in questions" href="#/app/playlists/{{question.id}}">
         <h2>{{question.input}}</h2>
-        <strong>Author: {{question.nickname}}</strong>
+        <strong>Author: {{question.nick}}</strong>
         <small style="float:right;">Date: {{question.dateIn}}</small>
       </ion-item>
     </ion-list>
