login implemented in both side, logout implemented in clientside

--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -8,11 +8,11 @@
       <div class="list">
         <label class="item item-input">
           <span class="input-label">Username</span>
-          <input type="text" ng-model="theuser.nickname">
+          <input type="text" ng-model="theusertologin.nickname">
         </label>
         <label class="item item-input">
           <span class="input-label">Password</span>
-          <input type="password" ng-model="theuser.password">
+          <input type="password" ng-model="theusertologin.password">
         </label>
         <label class="item">
           <button class="button button-block button-stable" ng-click="registered=0" type="submit">Log in</button>
