--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -9,7 +9,11 @@
         </button>
       </ion-nav-buttons>
       <ion-nav-buttons side="right">
-        <button class="button button-icon ion-person">
+        <button ng-if="theuser.getNickname()=='anonymous'" class="button button-icon ion-person">
+          {{theuser.nickname}}
+        </button>
+        <button ng-if="theuser.getNickname()!='anonymous'" class="button button-icon ion-happy-outline">
+        {{theuser.nickname}} <strong>{{theuser.userscore}}</strong>
         </button>
       </ion-nav-buttons>
     </ion-nav-bar>
@@ -32,13 +36,16 @@
         <ion-item menu-close href="#/app/playlists">
           MAIN PAGE
         </ion-item>
-        <ion-item menu-close ng-click="openModal(1)">
+        <ion-item ng-show="theuser.getNickname()=='anonymous'" menu-close ng-click="openModal(1)">
           LOGIN
         </ion-item>
-        <ion-item ng-show="theuser.getNickname()!='john doe'" menu-close href="#/app/search">
+        <ion-item ng-show="theuser.getNickname()!='anonymous'" menu-close ng-click="logout()">
+          LOGOUT
+        </ion-item>
+        <ion-item ng-show="theuser.getNickname()!='anonymous'" menu-close href="#/app/search">
           MY ACCOUNT
         </ion-item>
-        <ion-item ng-show="theuser.getNickname()=='john doe'" menu-close href="#/app/signin">
+        <ion-item ng-show="theuser.getNickname()=='anonymous'" menu-close href="#/app/signin">
           SIGN UP
         </ion-item>
         <ion-item menu-close href="#/app/browse">
