add question feature done with modal

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -20,7 +20,7 @@
     <div class="bar bar-subheader margin">
       <div class="button-bar">
         <a class="button button-positive" ng-click="openModal(2);" >What's AGORA?</a>
-        <a class="button button-calm">Add a question</a>
+        <a class="button button-calm" ng-click="openModal(3);">Add a question</a>
       </div>
     </div>
     <ion-nav-view name="menuContent"></ion-nav-view>
