nickname validation implemented in register

--- a/www/templates/signin.html
+++ b/www/templates/signin.html
@@ -6,9 +6,12 @@
     <div class="list">
       <label class="item item-input item-stacked-label">
         <span class="input-label">Nick</span>
-        <input name="nick" ng-model="user.nickname" ng-pattern="/[a-zA-Z]{3,15}/" required type="text" placeholder="JohnTheRipper">
+        <input name="nick" ng-model="user.nickname" ng-pattern="/[a-zA-Z]{3,15}/" required type="text" ng-change="validateNick()" placeholder="JohnTheRipper">
         <div ng-show="registerForm.nick.$error.pattern" style="color: red; font-size:75%">
           <span class="help-block ">Please, insert a valid user nickname.</span>
+        </div>
+        <div ng-show="!nickvalidated" style="color: red; font-size:75%">
+          <span class="help-block ">This username already exists.</span>
         </div>
         <div ng-show="registerForm.nick.$error.required" class="advice" style="color: blue; font-size:75%">
             <span class="help-block ">Nickname is required.</span>
@@ -77,7 +80,7 @@
     </div>
 
     <label class="item">
-      <button ng-disabled="registerForm.$invalid || user.password!=password2" class="button button-block button-balanced" type="submit">Register!</button>
+      <button ng-disabled="registerForm.$invalid || user.password!=password2 || !nickvalidated" class="button button-block button-balanced" type="submit">Register!</button>
     </label>
   </form>
 
