--- a/www/templates/playlists.html
+++ b/www/templates/playlists.html
@@ -10,7 +10,7 @@
         <div class = "input-label">
       Order by
       </div>
-      <select class="" name="filterq" ng-model="theFilter">
+      <select style="margin-left:20%;margin-right:20%;" class="" name="filterq" ng-model="theFilter">
         <option value="nickname">Nickname</option>
         <option value="date">Date</option>
         <option value="topicname">Topic</option>
