--- a/www/templates/question.html
+++ b/www/templates/question.html
@@ -9,6 +9,7 @@
       <select name="multipleSelect" id="multipleSelect" ng-model="thequestion.topicName">
         <option ng-repeat="topic in topics" value="{{topic.topicname}}">{{topic.topicname}}</option>
       </select-->
+      <h2 style="margin-left:25%;margin-right:25%;" ng-if="theuser.nickname=='anonymous'">Register to gain access to all topics</h2>
           <div class="list">
           <label class="item item-input item-select">
             <div class="input-label">
